Dropping config db in 4.0.0-rc0 fails while it passes in 3.7.9 and earlier

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.0.2, 4.1.1
    • Affects Version/s: 4.0.0-rc0
    • Component/s: None
    • Fully Compatible
    • ALL
    • v4.0
    • Sharding 2018-07-16, Sharding 2018-07-30, Sharding 2018-08-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      trying to drop the config database in mongodb 4.0.0-rc0 fails with following exception:

      com.mongodb.MongoCommandException: Command failed with error 40528: 'Direct writes against config.transactions cannot be performed using a transaction or on a session.' on server 127.0.0.1:27500. The full response is { "ok" : 0.0, "errmsg" : "Direct writes against config.transactions cannot be performed using a transaction or on a session.", "code" : 40528, "codeName" : "Location40528" }
       	at com.mongodb.connection.ProtocolHelper.getCommandFailureException(ProtocolHelper.java:164)
       	at com.mongodb.connection.InternalStreamConnection.receiveCommandMessageResponse(InternalStreamConnection.java:295)
       	at com.mongodb.connection.InternalStreamConnection.sendAndReceive(InternalStreamConnection.java:255)
       	at com.mongodb.connection.UsageTrackingInternalConnection.sendAndReceive(UsageTrackingInternalConnection.java:98)
       	at com.mongodb.connection.DefaultConnectionPool$PooledConnection.sendAndReceive(DefaultConnectionPool.java:441)
       	at com.mongodb.connection.CommandProtocolImpl.execute(CommandProtocolImpl.java:80)
       	at com.mongodb.connection.DefaultServer$DefaultServerProtocolExecutor.execute(DefaultServer.java:189)
       	at com.mongodb.connection.DefaultServerConnection.executeProtocol(DefaultServerConnection.java:264)
       	at com.mongodb.connection.DefaultServerConnection.command(DefaultServerConnection.java:126)
       	at com.mongodb.connection.DefaultServerConnection.command(DefaultServerConnection.java:118)
       	at com.mongodb.operation.CommandOperationHelper.executeWrappedCommandProtocol(CommandOperationHelper.java:226)
       	at com.mongodb.operation.CommandOperationHelper.executeWrappedCommandProtocol(CommandOperationHelper.java:217)
       	at com.mongodb.operation.CommandOperationHelper.executeWrappedCommandProtocol(CommandOperationHelper.java:154)
       	at com.mongodb.operation.CommandOperationHelper.executeWrappedCommandProtocol(CommandOperationHelper.java:147)
       	at com.mongodb.operation.DropDatabaseOperation$1.call(DropDatabaseOperation.java:89)
       	at com.mongodb.operation.DropDatabaseOperation$1.call(DropDatabaseOperation.java:86)
       	at com.mongodb.operation.OperationHelper.withConnectionSource(OperationHelper.java:462)
       	at com.mongodb.operation.OperationHelper.withConnection(OperationHelper.java:424)
       	at com.mongodb.operation.DropDatabaseOperation.execute(DropDatabaseOperation.java:86)
       	at com.mongodb.operation.DropDatabaseOperation.execute(DropDatabaseOperation.java:45)
       	at com.mongodb.Mongo$3.execute(Mongo.java:837)
       	at com.mongodb.Mongo$3.execute(Mongo.java:818)
       	at com.mongodb.DB.dropDatabase(DB.java:227)
      

            Assignee:
            Sarah Zhou
            Reporter:
            Ankur Srivastava (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: