SERVER-35244 Dropping config db in 4.0.0-rc0 fails while it passes in 3.7.9 and earlier